@@ -14,10 +14,10 @@ index 772bd2a7ea..2b345c854c 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 07c856400f..756369d371 100644
+index 1a41046169..953283d545 100644
 --- a/Changes
 +++ b/Changes
-@@ -599,11 +599,26 @@ OCaml 5.0
+@@ -602,11 +602,26 @@ OCaml 5.0
    mingw-w64 i686 port.
    (David Allsopp, review by Xavier Leroy and Sébastien Hinderer)
  
@@ -44,7 +44,7 @@ index 07c856400f..756369d371 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -639,13 +654,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -642,13 +657,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -60,7 +60,7 @@ index 07c856400f..756369d371 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -749,6 +764,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -752,6 +767,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -70,7 +70,7 @@ index 07c856400f..756369d371 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1008,6 +1026,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1011,6 +1029,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -9915,7 +9915,7 @@ index 0000000000..bd8cbb2a05
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..6e090d6292
+index 0000000000..39f4c8b19d
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,9906 @@
@@ -9935,10 +9935,10 @@ index 0000000000..6e090d6292
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 07c856400f..756369d371 100644
++index 1a41046169..953283d545 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -599,11 +599,26 @@ OCaml 5.0
++@@ -602,11 +602,26 @@ OCaml 5.0
 +   mingw-w64 i686 port.
 +   (David Allsopp, review by Xavier Leroy and Sébastien Hinderer)
 + 
@@ -9965,7 +9965,7 @@ index 0000000000..6e090d6292
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -639,13 +654,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -642,13 +657,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -9981,7 +9981,7 @@ index 0000000000..6e090d6292
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -749,6 +764,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -752,6 +767,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -9991,7 +9991,7 @@ index 0000000000..6e090d6292
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1008,6 +1026,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1011,6 +1029,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
